# stock-api

./: .gitignore  .pre-commit-config.yaml  README.md  bump.py  config.txt.example  index.py
backend/: .pre-commit-config.yaml  config.txt.example  index.py  requirements.txt
backend/app/: __init__.py  main.py  models.py
backend/app/api/: __init__.py
backend/app/api/routes/: scanner.py
backend/sj-trading/: pyproject.toml
backend/sj-trading/src/sj_trading/: __init__.py  api_client.py  config.py  scanner.py
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts  scanner.ts  types.ts
frontend/src/router/: index.ts
frontend/src/stores/: scanner.ts
frontend/src/views/: ScannerView.vue
scripts/: bump_version.py  check_version.py
sj-trading/: README.md  pyproject.toml
