[project]
name = "sj-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ltchou", email = "leochoulfc@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "shioaji>=1.2.7",
]

[project.scripts]
sj-trading = "sj_trading:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
