[project]
name = "sj-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ltchou", email = "leochoulfc@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "shioaji>=1.2.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.6",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
sj-trading = "sj_trading:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
